#2288 Fixes label word-wrap issue on dropdown

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -1,4 +1,4 @@
-/*!
+]/*!
  * # Semantic UI - Dropdown
  * http://github.com/semantic-org/semantic-ui/
  *
@@ -622,6 +622,7 @@ select.ui.dropdown {
   user-select: none;
   display: inline-block;
   vertical-align: baseline;
+  white-space: normal;
   font-size: @labelSize;
   padding: @labelPadding;
   margin: @labelMargin;
